--- a/thesis.tex
+++ b/thesis.tex
@@ -149,7 +149,7 @@ As we have explained in the Preface, the results in these papers will hopefully 
 the overall goal of building a consistent theory that unifies quantum mechanics and general
 relativity. There are several closely related ideas in play here, so in this Introduction
 we will review the relevant literature and explain how the work in the rest of the thesis
-are motivated by these ideas.
+is motivated by these ideas.
 
 The fundamental reason why it is so difficult to build a consistent quantum theory of
 gravity, is that the theory of general relativity and the theory of quantum mechanics
@@ -177,29 +177,29 @@ been captured by the event horizon. Although an interesting, if not somewhat pro
 (see, for instance, Ref.~\cite{Chen:2014jwq} for a review), in this thesis we assume the
 absence of any Planck-scale remnant.}. This may not seem problematic by itself, and it is a reasonably robust result
 that follows directly from semi-classical physics near the horizon, without invoking any
-Planck-scale assumptions. However, the fact that the radiations have a thermal spectrum
+Planck-scale assumptions. However, the fact that the radiation has a thermal spectrum
 violates quantum mechanics in the most profound way: imagine a collection of particles
 in a pure quantum state that forms a black hole, which then evaporates into a collection
 of thermal particles. This is therefore a scattering process which turns
 a pure state into a thermal density matrix, so it cannot be unitary in general. As unitarity
 is equivalent to information conservation, we therefore have a paradox where any process
-that involves black holes as intermediate states have information loss.
+that involves black holes as intermediate states has information loss.
 
 The core geometric property of black holes that led to the information paradox,
 is that classically, once information has crossed the event horizon, it will never be
 able to get out. An idea known as black hole complementarity \cite{PhysRevD.48.3743}
 is therefore to propose that in the full quantum theory of gravity,
-the Hawking radiations from the horizon are not completely thermal,
-but instead carry subtle deviations that encode the incoming state. In other words, the
+the Hawking radiation from the horizon is not completely thermal,
+but instead carries subtle deviations that encode the incoming state. In other words, the
 event horizon, or more correctly the ``stretched horizon'' that is one Planck length outside
 the event horizon, scrambles the incoming information and ``reflects'' them via subtle
-correlations in the outgoing Hawking radiations. However, on closer inspection this leads
+correlations in the outgoing Hawking radiation. However, on closer inspection this leads
 to a new paradox: if a particle carrying some information crosses the event horizon,
 the equivalence principle implies that the free-falling observer sees nothing special
 about the event horizon, certainly nothing so dramatic that destroys the information.
 At the same time though, the information is being reflected by the stretched horizon,
 so one would be able to see two copies of the same quantum state by first collecting
-the Hawking radiations and then jump into the event horizon to catch the original
+the Hawking radiation and then jump into the event horizon to catch the original
 carrier of the information. This is a direct violation
 of the quantum no-cloning theorem \cite{nielsen2001quantum}, which itself follows from
 linearity and unitarity of quantum mechanics.
@@ -209,7 +209,7 @@ have learned from both relativity and quantum mechanics, which is that descripti
 of physics should depend on the observer. It is indeed true that information seems to
 appear in two different places, but no single observer can observe them simultaneously.
 For an observer to observe the information reflected by the stretched horizon, he
-must first wait long enough to collect enough Hawking radiations to reconstruct the original
+must first wait long enough to collect enough Hawking radiation to reconstruct the original
 information. If the stretched horizon takes too long to reflect information, the observer
 would not have enough time once he jumps into the event horizon, because the original
 carrier would have died at the singularity.
@@ -235,7 +235,7 @@ that is logarithmic in the central charge $c$:
 \[
 t_\star = \frac{\beta}{2\pi}\log\frac{c}{h_{w}}
 \]
-Here $\beta$ is the inverse temperature the $h_w$ is the conformal weight of
+Here $\beta$ is the inverse temperature and $h_w$ is the conformal weight of
 an operator $W$.
 
 Chapter \ref{chap:chaos} of this thesis is therefore dedicated to a more careful
@@ -246,13 +246,13 @@ However, for many conformal field theories this is not true. We find that
 even a sparse spectrum of intermediate states can dominate the out-or-time-order
 correlators, and therefore spoil or at least dramatically modify the onset of
 quantum chaos. This has important implications which we will discuss in detail in
-Chapter \ref{chap:chaos}, but one of the biggest impact is that the decoupling
+Chapter \ref{chap:chaos}, but one of the biggest impacts is that the decoupling
 theorem is no longer true for the gravity dual of the boundary CFT, and one can
 no longer use effective field theory to describe bulk physics.
 
-Armed with the insights about quantum scrambling on the black hole horizon, it is interesting to see if we can apply the same understanding to cosmological horizons, since they share the same mathematical formulation classically. In particular, it would be interesting to build a microscopic theory of the cosmological horizon that enables the thermodynamic interpretation of the de-Sitter entropy as the logarithm of the number of quantum microstates encoded by the stretched horizon. We would expect the stretched horizon of the de-Sitter spacetime to share the same feature of the stretched horizon of black holes, in the sense that for an observer in the static patch the stretched horizon scrambles information and reflects them via Hawking radiations with the de-Sitter temperature. In Chapter \ref{chap:map} we will attempt to build such a theory, where we model the de-Sitter horizon as a large-$N$ quantum spin model with a Hamiltonian consisting of a ``local'' piece, which reproduces the semi-classical local bulk physics, and a ``non-local'' piece which generates the scrambling dynamics. This is a holographic theory in the sense that we have constructed a map between semi-classical gravity in a bulk spacetime (in our case the static patch of the de-Sitter spacetime) and a unitary quantum mechanical model its boundary (the stretched horizon).
+Armed with the insights about quantum scrambling on the black hole horizon, it is interesting to see if we can apply the same understanding to cosmological horizons, since they share the same mathematical formulation classically. In particular, it would be interesting to build a microscopic theory of the cosmological horizon that enables the thermodynamic interpretation of the de-Sitter entropy as the logarithm of the number of quantum microstates encoded by the stretched horizon. We would expect the stretched horizon of the de-Sitter spacetime to share the same feature of the stretched horizon of black holes, in the sense that for an observer in the static patch the stretched horizon scrambles information and reflects them via Hawking radiation with the de-Sitter temperature. In Chapter \ref{chap:map} we will attempt to build such a theory, where we model the de-Sitter horizon as a large-$N$ quantum spin model with a Hamiltonian consisting of a ``local'' piece, which reproduces the semi-classical local bulk physics, and a ``non-local'' piece which generates the scrambling dynamics. This is a holographic theory in the sense that we have constructed a map between semi-classical gravity in a bulk spacetime (in our case the static patch of the de-Sitter spacetime) and a unitary quantum mechanical model its boundary (the stretched horizon).
 
-A key piece in our holographic map on the cosmological horizon is the ability to write bulk modes as spin waves living on the boundary spin model. This requires that we solve for the wavefunctions of scalar fields living on the bulk. In a similar vein, in Chapter \ref{chap:flatspace} we will discuss how one can construct wavefunctions of massive scalar fields that transform as a unitary principal series representation of the $\rm SO(3,1)$ group. This is motivated by recent work in constructing holographic theories between flat 4D Minkowski spacetime and its 2D boundary, known as the celestial sphere \cite{deBoer:2003vf,Kapec:2014opa,Kapec:2016jld,Cheung:2016iub}. As an application, we will discuss how these unitary principal series wavefunctions can be used to construct a holographic map between gravitons living in 4D Minkowski spacetime and conformal operators living on the celestial sphere. The details will be discussed in Chapter \ref{chap:gravitons}, but the basic idea is to decompose the Weyl scalars built from the graviton modes into the scalar modes in Chapter \ref{chap:flatspace}, and map these into the celestial sphere. Both the scalar holographic map and the graviton holographic map are invertible, in the sense that one can recover the original bulk modes via inverse transforms on the celestial operators. We will discuss both the successes and the shortcomings of our procedure. These include in particular, the fact that this simple holographic map that we have proposed amounts to a kinematic reorganization of the bulk modes, and that it remains unclear whether the addition of dynamical interactions will have any useful description in terms of conformal operators on the celestial sphere.
+A key piece in our holographic map on the cosmological horizon is the ability to write bulk modes as spin waves living on the boundary spin model. This requires that we solve for the wavefunctions of scalar fields living on the bulk. In a similar vein, in Chapter \ref{chap:flatspace} we will discuss how one can construct wavefunctions of massive scalar fields that transform as a unitary principal series representation of the $\rm SO(3,1)$ group. This is motivated by recent work in constructing holographic theories between flat 4D Minkowski spacetime and its 2D boundary, known as the celestial sphere \cite{deBoer:2003vf,Kapec:2014opa,Kapec:2016jld,Cheung:2016iub}. As an application, we will discuss how these unitary principal series wavefunctions can be used to construct a holographic map between gravitons living in 4D Minkowski spacetime and conformal operators living on the celestial sphere. The details will be discussed in Chapter \ref{chap:gravitons}, but the basic idea is to decompose the Weyl scalars built from the graviton modes into the scalar modes in Chapter \ref{chap:flatspace}, and map these into the celestial sphere. Both the scalar holographic map and the graviton holographic map are invertible, in the sense that one can recover the original bulk modes via inverse transforms on the celestial operators. We will discuss both the successes and the shortcomings of our procedure. These include, in particular, the fact that this simple holographic map that we have proposed amounts to a kinematic reorganization of the bulk modes, and that it remains unclear whether the addition of dynamical interactions will have any useful description in terms of conformal operators on the celestial sphere.
 
 
 \chapter{Notes on Scrambling in Conformal Field Theory}\label{chap:chaos}
@@ -725,7 +725,7 @@ correlator, which may occur well before the asymptotic late-time limit.
 We then examined a somewhat independent issue, that the higher intermediate
 states with $0<h_{p}\ll c$ can have large out-of-time ordered correlators.
 We discussed the implications of this statement, which is that in
-the AdS$_{3}$ gravity dual the UV dynamics and IR dynamics is no
+the AdS$_{3}$ gravity dual the UV dynamics and IR dynamics are no
 longer decoupled when these observables are computed. This lack of
 decoupling appears even when the usual time-ordered correlators, or
 transition amplitudes satisfy the standard decoupling lore. When applied
@@ -1216,7 +1216,7 @@ $r_{\star}$ such that
 \end{equation}
 where $\ell_{p}$ is the Planck length.
 
-As it stands, the bulk Hilbert space is infinite dimensional, labelled
+As it stands, the bulk Hilbert space is infinite dimensional, labeled
 by the oscillators $c_{\omega lm}$ where $\omega\in\mathbb{R}$,
 and the angular momentum ranges up to infinity. Each oscillator mode
 creates a mode entangled across both static patches, with a stress-energy
@@ -1854,7 +1854,7 @@ we then have
 \int_{0}^{\infty}\psi_{p}\psi_{p'}^{\star}\,\rho\,\dd\rho=\frac{\pi\Gamma(i\alpha)\Gamma(-i\alpha)}{4}\delta(\alpha-\alpha')=\frac{\pi^{2}}{4p\sinh\left(\pi\sqrt{p^{2}-1}\right)}\delta\left(p-p'\right)\,.\label{eq:radialnorm}
 \end{equation}
  For $0\le p^{2}<1$, instead of oscillating terms in eq.~\ref{eq:surfaceterm}
-we have power-law divergencies, and the mode functions $\psi_{p}$
+we have power-law divergences, and the mode functions $\psi_{p}$
 in this case again are not normalizable.
 
 To conclude, the normalizable radial mode functions arise from $\psi_{p,2}$
@@ -1913,7 +1913,7 @@ For $0\le p^{2}<1$, the radial mode functions are not normalizable.
 \label{sec:ups} We are now in a position to build the unitary principal
 series representation of ${\rm SO(3,1)}$ which acts on the ${\rm dS_{3}}$/${\rm M_{4}}$
 mode functions. Since the action of ${\rm SO(3,1)}$ on ${\rm M_{4}}$
-leaves the radial coordinate $\rho$ invariant, the actions is identical
+leaves the radial coordinate $\rho$ invariant, the action is identical
 on both ${\rm dS_{3}}$ mode functions and on ${\rm M_{4}}$ mode
 functions. For simplicity of presentation we will focus on ${\rm dS_{3}}$
 modes, but all equations in this section carry over to the ${\rm M_{4}}$
@@ -2073,7 +2073,7 @@ z'=\frac{dz+c}{bz+a}\,.
 \]
 
 Since we know the group of rotations acts in a straightforward way
-on the spherical harmonics, it suffice to consider one of the boost
+on the spherical harmonics, it suffices to consider one of the boost
 generators to check the matching of the generators. To do this we
 Taylor expand \eqref{eq:prindef} for a group element of the form
 $g=\exp(ik_{3}\epsilon)$. Plugging in the above relations gives
@@ -2640,7 +2640,7 @@ functions as a complete basis for the Weyl scalars.
 The Weyl scalars encode all the information of the gravitational perturbations.
 Our strategy will be to proceed in two steps: first consider a fixed
 radius 3D de Sitter slice of flat spacetime, and use the Plancherel
-(or completeness) theorem for the unitary principle series representations
+(or completeness) theorem for the unitary principal series representations
 to decompose a general function on such a slice into irreducible representations;
 next we allow for a general radial variation of such functions, effectively
 decomposing a general solution into solutions of the 4D massive scalar
@@ -2780,11 +2780,11 @@ modes (there are two types, scalar and vector perturbations, see eqs.~\ref{eq:an
 and eq.~\ref{eq:vectoransatz}) and obtain 2D conformal operators
 that describe 4D gravitons in flat spacetime. The significance of
 all these formalisms developed in this chapter is precisely to allow
-us to write down a simple procedure that holographically map gravitons
+us to write down a simple procedure that holographically maps gravitons
 living in flat 4D spacetime, to 2D conformal operators living on the
 celestial sphere.
 
-We stress that this simple procedure amounts to use kinematic information
+We stress that this simple procedure amounts to using kinematic information
 to organize the modes in a convenient way. With interactions included,
 one can still use this procedure to map bulk dynamics to the celestial
 sphere. The important question then is whether the dynamics has any
