--- a/thesis.tex
+++ b/thesis.tex
@@ -34,6 +34,7 @@
 \reader{Antal Jevicki}
 \reader{Stephon Haigh-Solomon Alexander}
 \dean{Andrew G.~Campbell}
+\submitdate{May 2022}
 \abstract{The unification of quantum mechanics and general relativity is the holy grail of fundamental theoretical physics. This thesis represents a small part of that effort, where we consider a number of problems that might be of interest to the theoretical studies of black holes and quantum cosmology. Why study black holes and quantum cosmology, one might ask? The answer lies in the fact that they are the only two systems where it is necessary to apply quantum mechanics and general relativity simultaneously. In particular, they both have event horizons, which are global structures of the spacetime that prevent events from making causal contact. They therefore have become the primary arenas where logical incompatibilities of quantum mechanics and general relativity can be made most transparent. One of the most dramatic incompatibilities is the black hole information paradox, which concerns the unitarity of processes that involve the formation and the evaporation of black holes. This thesis will first discuss a proposed resolution to the information paradox called black hole complementarity, and a closely linked issue known as quantum scrambling, in particular in the context of a 2D conformal field theory. We will then present a microscopic quantum model of the de-Sitter universe that incorporates the required quantum scrambling on the cosmological horizon. This quantum model of cosmology is a so-called ``holographic'' map between the stretched horizon of the de-Sitter spacetime and the static patch (colloquially known as the ``bulk''). Continuing in a similar vein, the rest of the thesis will be concerned with building holographic theories between flat spacetime and its boundary, and we present two holographic theories of the flat spacetime, first for massive scalar particles and then extending the results to gravitons. As these all have something to do with mappings between boundary 2-spheres and their bulk, this is therefore a story of building holography on 2-spheres. Hence the title of this thesis.}
 \abstractpage
 \abstractpage
